--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  width: 100vw;
+  min-height: 100vh;
 }
-
+.Filter > div {
+  /* background-image: url(./assets/bg444.svg); */
+  background-size: cover;
+  /* background-repeat: no-repeat; */
+  /* background-attachment: fixed; */
+  /* background-position: center; */
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -26,6 +34,14 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+body {
+  padding-top: 6rem;
+  background-image: url(./assets/bg.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 /* body {
