--- a/src/index.css
+++ b/src/index.css
@@ -36,12 +36,12 @@ a:hover {
   color: #535bf2;
 }
 body {
-  padding-top: 6rem;
   background-image: url(./assets/bg.svg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
+  /* background-position: center;  */
+  
 }
 
 /* body {
