--- a/src/index.css
+++ b/src/index.css
@@ -38,9 +38,9 @@ a:hover {
 body {
   background-image: url(./assets/bg.svg);
   background-size: cover;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
   background-attachment: fixed;
-  /* background-position: center;  */
+  background-position: center; 
   
 }
 
